# webhook-emitter

./: .gitignore  README.md  TESTING.md  config.example.json  emitter.py  pyproject.toml  scenarios.py  signers.py
conductor-smoke/: .gitignore  README.md  STRESS_PLAN.md  STRESS_REPORT-2026-05-26.md  bucket_smoke.py  composite_smoke.py  dual_emitter_smoke.py  load_smoke.py  matrix.sh  multi_verifier_smoke.py  replay_smoke.py  smoke.py
systemd/: webhook-emitter.service
tests/: test_auth.py  test_concurrency.py  test_negative_paths.py  test_signers.py
