[project]
name = "webhook-emitter"
version = "0.1.0"
description = "On-demand webhook signer + emitter for testing conductor's webhooks-oss receive path"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
]

[project.optional-dependencies]
test = ["pytest>=8.3", "pytest-asyncio>=0.24"]

[project.scripts]
webhook-emitter = "emitter:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["emitter", "signers"]
